word-wrap to prevent comments going outside container

--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,7 @@ header {
     border: solid;
     max-width: 100%;
     max-height: 100%;
+    word-wrap: break-word;
 }
 img {
     display: block;
